test/lit/pto/issue708_zero_valid_subview_inferred_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --emit-pto-ir %s 2>&1 | FileCheck %s

// On the inferred path (no valid operand) the result type is authoritative for a
// *static* valid extent. A *dynamic* result valid (?) is the one case that still
// cannot be inferred from the type -- there is no SSA value to supply the runtime
// extent, so an explicit valid_row/valid_col operand is required.

module attributes {"pto.device-spec" = "Ascend910B3"} {
  func.func @neg_inferred_dynamic_requires_operand() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %c0 = arith.constant 0 : index
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=128, v_row=16, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %t = pto.subview %src[%c0, %c0] sizes [5, 128] :
      !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=128, v_row=16, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>
      -> !pto.tile_buf<loc=vec, dtype=f32, rows=5, cols=128, v_row=?, v_col=128, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    return
  }
}

// CHECK: error: 'pto.subview' op expects result valid_shape[0] to match inferred/explicit valid_row
